testdata/baselines/reference/submodule/conformance/commonJSImportClassTypeReference.errors.txt
main.js(3,12): error TS7006: Parameter 'k' implicitly has an 'any' type.
mod1.js(1,7): error TS2300: Duplicate identifier 'K'.
mod1.js(6,1): error TS2304: Cannot find name 'exports'.
mod1.js(6,9): error TS2300: Duplicate identifier 'K'.


==== main.js (1 errors) ====
    const { K } = require("./mod1");
    /** @param {K} k */
    function f(k) {
               ~
!!! error TS7006: Parameter 'k' implicitly has an 'any' type.
        k.values()
    }
    
==== mod1.js (3 errors) ====
    class K {
          ~
!!! error TS2300: Duplicate identifier 'K'.
        values() {
            return new K()
        }
    }
    exports.K = K;
    ~~~~~~~
!!! error TS2304: Cannot find name 'exports'.
            ~
!!! error TS2300: Duplicate identifier 'K'.
    